Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3645,5 +3645,61 @@
     "TVL_TOKEN": 527038.333147116,
     "SHARES": 522837.719467,
     "PPS": 1.0080342590515434
+  },
+  "2025-02-05 20:10": {
+    "LTVL": 711256.055991,
+    "TVL_USD": 527017.975005,
+    "TVL_TOKEN": 527008.3412925212,
+    "SHARES": 522837.719467,
+    "PPS": 1.0079768954500317
+  },
+  "2025-02-05 20:20": {
+    "LTVL": 710767.878128,
+    "TVL_USD": 527466.329193,
+    "TVL_TOKEN": 527439.9571951402,
+    "SHARES": 522837.719467,
+    "PPS": 1.0088024210128372
+  },
+  "2025-02-05 20:30": {
+    "LTVL": 710765.290021,
+    "TVL_USD": 527548.3921930001,
+    "TVL_TOKEN": 527545.8283202745,
+    "SHARES": 522837.719467,
+    "PPS": 1.0090049142936246
+  },
+  "2025-02-05 20:40": {
+    "LTVL": 709853.514118,
+    "TVL_USD": 528304.288832,
+    "TVL_TOKEN": 528302.8993953746,
+    "SHARES": 522837.719467,
+    "PPS": 1.0104529182285202
+  },
+  "2025-02-05 20:50": {
+    "LTVL": 708407.663166,
+    "TVL_USD": 527807.332016,
+    "TVL_TOKEN": 527791.5246598363,
+    "SHARES": 522837.719467,
+    "PPS": 1.0094748427827402
+  },
+  "2025-02-05 21:00": {
+    "LTVL": 709817.679278,
+    "TVL_USD": 528244.544612,
+    "TVL_TOKEN": 528241.713236417,
+    "SHARES": 522837.719467,
+    "PPS": 1.010335891172745
+  },
+  "2025-02-05 21:10": {
+    "LTVL": 709762.978276,
+    "TVL_USD": 527930.028427,
+    "TVL_TOKEN": 527916.9202498702,
+    "SHARES": 522837.719467,
+    "PPS": 1.0097146793235348
+  },
+  "2025-02-05 21:20": {
+    "LTVL": 710453.695133,
+    "TVL_USD": 528135.825101,
+    "TVL_TOKEN": 528122.6325976377,
+    "SHARES": 522837.719467,
+    "PPS": 1.0101081328562624
   }
 }
