Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3701,5 +3701,12 @@
     "TVL_TOKEN": 528122.6325976377,
     "SHARES": 522837.719467,
     "PPS": 1.0101081328562624
+  },
+  "2025-02-05 21:30": {
+    "LTVL": 710079.362023,
+    "TVL_USD": 527905.1158459999,
+    "TVL_TOKEN": 527876.0826614536,
+    "SHARES": 522837.719467,
+    "PPS": 1.0096365717446514
   }
 }
