Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3708,5 +3708,19 @@
     "TVL_TOKEN": 527876.0826614536,
     "SHARES": 522837.719467,
     "PPS": 1.0096365717446514
+  },
+  "2025-02-05 21:40": {
+    "LTVL": 711627.082094,
+    "TVL_USD": 527724.7904040001,
+    "TVL_TOKEN": 527716.7954945483,
+    "SHARES": 522837.719467,
+    "PPS": 1.0093319128400342
+  },
+  "2025-02-05 21:50": {
+    "LTVL": 711563.551477,
+    "TVL_USD": 528100.342289,
+    "TVL_TOKEN": 528082.3663652489,
+    "SHARES": 522837.719467,
+    "PPS": 1.010031118075405
   }
 }
