Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3722,5 +3722,19 @@
     "TVL_TOKEN": 528082.3663652489,
     "SHARES": 522837.719467,
     "PPS": 1.010031118075405
+  },
+  "2025-02-05 22:00": {
+    "LTVL": 710787.141713,
+    "TVL_USD": 528742.7805280001,
+    "TVL_TOKEN": 528720.574263881,
+    "SHARES": 522837.719467,
+    "PPS": 1.0112517796207936
+  },
+  "2025-02-05 22:10": {
+    "LTVL": 709557.125825,
+    "TVL_USD": 528101.514591,
+    "TVL_TOKEN": 528086.9077071329,
+    "SHARES": 522837.719467,
+    "PPS": 1.0100398040246295
   }
 }
