Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3736,5 +3736,33 @@
     "TVL_TOKEN": 528086.9077071329,
     "SHARES": 522837.719467,
     "PPS": 1.0100398040246295
+  },
+  "2025-02-05 22:20": {
+    "LTVL": 708951.263165,
+    "TVL_USD": 528777.882813,
+    "TVL_TOKEN": 528755.1569163558,
+    "SHARES": 522837.719467,
+    "PPS": 1.0113179237630145
+  },
+  "2025-02-05 22:30": {
+    "LTVL": 705944.625766,
+    "TVL_USD": 526894.1766530001,
+    "TVL_TOKEN": 526871.4474187584,
+    "SHARES": 522837.719467,
+    "PPS": 1.0077150668392298
+  },
+  "2025-02-05 22:40": {
+    "LTVL": 705114.482807,
+    "TVL_USD": 527485.234726,
+    "TVL_TOKEN": 527456.2299079173,
+    "SHARES": 522837.719467,
+    "PPS": 1.008833544843753
+  },
+  "2025-02-05 22:50": {
+    "LTVL": 705432.360735,
+    "TVL_USD": 527067.883796,
+    "TVL_TOKEN": 527050.0431520394,
+    "SHARES": 522837.719467,
+    "PPS": 1.00805665606784
   }
 }
