Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3764,5 +3764,33 @@
     "TVL_TOKEN": 527050.0431520394,
     "SHARES": 522837.719467,
     "PPS": 1.00805665606784
+  },
+  "2025-02-05 23:00": {
+    "LTVL": 705033.816216,
+    "TVL_USD": 527474.162429,
+    "TVL_TOKEN": 527453.0643064277,
+    "SHARES": 522837.719467,
+    "PPS": 1.008827490189753
+  },
+  "2025-02-05 23:10": {
+    "LTVL": 705820.554561,
+    "TVL_USD": 526798.683404,
+    "TVL_TOKEN": 526796.2443373887,
+    "SHARES": 522837.719467,
+    "PPS": 1.0075712304659736
+  },
+  "2025-02-05 23:20": {
+    "LTVL": 706566.639052,
+    "TVL_USD": 527496.343869,
+    "TVL_TOKEN": 527494.3552152808,
+    "SHARES": 522837.719467,
+    "PPS": 1.008906464807145
+  },
+  "2025-02-05 23:30": {
+    "LTVL": 705261.756294,
+    "TVL_USD": 527873.109525,
+    "TVL_TOKEN": 527860.931773304,
+    "SHARES": 522837.719467,
+    "PPS": 1.0096075935596707
   }
 }
