Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3792,5 +3792,40 @@
     "TVL_TOKEN": 527860.931773304,
     "SHARES": 522837.719467,
     "PPS": 1.0096075935596707
+  },
+  "2025-02-05 23:40": {
+    "LTVL": 705047.086914,
+    "TVL_USD": 527272.301968,
+    "TVL_TOKEN": 527272.3283316165,
+    "SHARES": 522837.719467,
+    "PPS": 1.008481807450957
+  },
+  "2025-02-05 23:50": {
+    "LTVL": 705702.841272,
+    "TVL_USD": 527407.6966329999,
+    "TVL_TOKEN": 527407.6280700082,
+    "SHARES": 522837.719467,
+    "PPS": 1.0087405870557062
+  },
+  "2025-02-06 00:00": {
+    "LTVL": 705831.873486,
+    "TVL_USD": 527177.299665,
+    "TVL_TOKEN": 527176.2611277656,
+    "SHARES": 522837.719467,
+    "PPS": 1.008298065535877
+  },
+  "2025-02-06 00:10": {
+    "LTVL": 707130.99965,
+    "TVL_USD": 527402.020369,
+    "TVL_TOKEN": 527400.2219342432,
+    "SHARES": 522837.719467,
+    "PPS": 1.0087264217889529
+  },
+  "2025-02-06 00:20": {
+    "LTVL": 708398.215464,
+    "TVL_USD": 527486.145672,
+    "TVL_TOKEN": 527491.5630103521,
+    "SHARES": 522837.719467,
+    "PPS": 1.0089011243261032
   }
 }
