Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3827,5 +3827,12 @@
     "TVL_TOKEN": 527491.5630103521,
     "SHARES": 522837.719467,
     "PPS": 1.0089011243261032
+  },
+  "2025-02-06 00:30": {
+    "LTVL": 709158.465178,
+    "TVL_USD": 528039.583711,
+    "TVL_TOKEN": 528045.8832983878,
+    "SHARES": 522837.719467,
+    "PPS": 1.0099613391258326
   }
 }
