Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3834,5 +3834,26 @@
     "TVL_TOKEN": 528045.8832983878,
     "SHARES": 522837.719467,
     "PPS": 1.0099613391258326
+  },
+  "2025-02-06 00:40": {
+    "LTVL": 708726.469742,
+    "TVL_USD": 527464.286247,
+    "TVL_TOKEN": 527466.2009493094,
+    "SHARES": 522837.719467,
+    "PPS": 1.008852615849958
+  },
+  "2025-02-06 00:50": {
+    "LTVL": 706432.261876,
+    "TVL_USD": 527394.908404,
+    "TVL_TOKEN": 527382.7469578552,
+    "SHARES": 522837.719467,
+    "PPS": 1.0086929984613362
+  },
+  "2025-02-06 01:00": {
+    "LTVL": 706779.94689,
+    "TVL_USD": 527220.242769,
+    "TVL_TOKEN": 527217.5275987328,
+    "SHARES": 522837.719467,
+    "PPS": 1.0083769934124067
   }
 }
