Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3855,5 +3855,12 @@
     "TVL_TOKEN": 527217.5275987328,
     "SHARES": 522837.719467,
     "PPS": 1.0083769934124067
+  },
+  "2025-02-06 01:10": {
+    "LTVL": 708313.819002,
+    "TVL_USD": 526589.366334,
+    "TVL_TOKEN": 526587.4916825297,
+    "SHARES": 522837.719467,
+    "PPS": 1.007171961922243
   }
 }
