Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3862,5 +3862,26 @@
     "TVL_TOKEN": 526587.4916825297,
     "SHARES": 522837.719467,
     "PPS": 1.007171961922243
+  },
+  "2025-02-06 01:20": {
+    "LTVL": 709062.308288,
+    "TVL_USD": 527267.8091160001,
+    "TVL_TOKEN": 527270.1765590928,
+    "SHARES": 522837.719467,
+    "PPS": 1.0084776918861391
+  },
+  "2025-02-06 01:30": {
+    "LTVL": 709720.177073,
+    "TVL_USD": 527516.5474030001,
+    "TVL_TOKEN": 527519.3274298556,
+    "SHARES": 522837.719467,
+    "PPS": 1.0089542276475925
+  },
+  "2025-02-06 01:40": {
+    "LTVL": 708744.530822,
+    "TVL_USD": 527106.514224,
+    "TVL_TOKEN": 527095.6771368781,
+    "SHARES": 522837.719467,
+    "PPS": 1.008143937423296
   }
 }
