Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3883,5 +3883,61 @@
     "TVL_TOKEN": 527095.6771368781,
     "SHARES": 522837.719467,
     "PPS": 1.008143937423296
+  },
+  "2025-02-06 01:50": {
+    "LTVL": 709726.544558,
+    "TVL_USD": 527377.896485,
+    "TVL_TOKEN": 527356.7969395545,
+    "SHARES": 522837.719467,
+    "PPS": 1.0086433654349984
+  },
+  "2025-02-06 02:00": {
+    "LTVL": 710428.889559,
+    "TVL_USD": 527472.622761,
+    "TVL_TOKEN": 527456.2557933828,
+    "SHARES": 522837.719467,
+    "PPS": 1.008833594353313
+  },
+  "2025-02-06 02:10": {
+    "LTVL": 711752.263881,
+    "TVL_USD": 527840.1033170001,
+    "TVL_TOKEN": 527832.4761377198,
+    "SHARES": 522837.719467,
+    "PPS": 1.0095531681911007
+  },
+  "2025-02-06 02:20": {
+    "LTVL": 712354.248439,
+    "TVL_USD": 527788.45093,
+    "TVL_TOKEN": 527781.8431013244,
+    "SHARES": 522837.719467,
+    "PPS": 1.0094563254528854
+  },
+  "2025-02-06 02:30": {
+    "LTVL": 712836.397024,
+    "TVL_USD": 529180.712694,
+    "TVL_TOKEN": 529178.0244696357,
+    "SHARES": 523877.408958,
+    "PPS": 1.0101180455980698
+  },
+  "2025-02-06 02:40": {
+    "LTVL": 712558.409186,
+    "TVL_USD": 528969.716326,
+    "TVL_TOKEN": 528963.8871439637,
+    "SHARES": 523877.408958,
+    "PPS": 1.0097092909504932
+  },
+  "2025-02-06 02:50": {
+    "LTVL": 712780.598908,
+    "TVL_USD": 528631.826028,
+    "TVL_TOKEN": 528610.681600736,
+    "SHARES": 523877.408958,
+    "PPS": 1.0090350768362975
+  },
+  "2025-02-06 03:00": {
+    "LTVL": 712428.413808,
+    "TVL_USD": 528615.27338,
+    "TVL_TOKEN": 528596.7143493593,
+    "SHARES": 523877.408958,
+    "PPS": 1.0090084155389445
   }
 }
