Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3939,5 +3939,40 @@
     "TVL_TOKEN": 528596.7143493593,
     "SHARES": 523877.408958,
     "PPS": 1.0090084155389445
+  },
+  "2025-02-06 03:10": {
+    "LTVL": 712047.80425,
+    "TVL_USD": 529145.2095839999,
+    "TVL_TOKEN": 529124.044622215,
+    "SHARES": 523877.408958,
+    "PPS": 1.0100150065158384
+  },
+  "2025-02-06 03:20": {
+    "LTVL": 711144.411318,
+    "TVL_USD": 528363.7441659999,
+    "TVL_TOKEN": 528341.3213603214,
+    "SHARES": 523877.408958,
+    "PPS": 1.008520910285481
+  },
+  "2025-02-06 03:30": {
+    "LTVL": 711648.824323,
+    "TVL_USD": 527934.296689,
+    "TVL_TOKEN": 527922.1650376474,
+    "SHARES": 523877.408958,
+    "PPS": 1.0077208064529686
+  },
+  "2025-02-06 03:40": {
+    "LTVL": 712839.667853,
+    "TVL_USD": 528443.433604,
+    "TVL_TOKEN": 528443.2116578512,
+    "SHARES": 523877.408958,
+    "PPS": 1.0087154029201844
+  },
+  "2025-02-06 03:50": {
+    "LTVL": 713099.097296,
+    "TVL_USD": 529002.781507,
+    "TVL_TOKEN": 529000.4433250405,
+    "SHARES": 523877.408958,
+    "PPS": 1.0097790709800414
   }
 }
