Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3974,5 +3974,19 @@
     "TVL_TOKEN": 529000.4433250405,
     "SHARES": 523877.408958,
     "PPS": 1.0097790709800414
+  },
+  "2025-02-06 04:00": {
+    "LTVL": 713280.435427,
+    "TVL_USD": 529135.9590459999,
+    "TVL_TOKEN": 529122.7415599157,
+    "SHARES": 523877.408958,
+    "PPS": 1.0100125191738059
+  },
+  "2025-02-06 04:10": {
+    "LTVL": 712856.346307,
+    "TVL_USD": 529226.334499,
+    "TVL_TOKEN": 529217.7400029025,
+    "SHARES": 523877.408958,
+    "PPS": 1.0101938563365893
   }
 }
