Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -3988,5 +3988,19 @@
     "TVL_TOKEN": 529217.7400029025,
     "SHARES": 523877.408958,
     "PPS": 1.0101938563365893
+  },
+  "2025-02-06 04:20": {
+    "LTVL": 714164.635296,
+    "TVL_USD": 528714.620517,
+    "TVL_TOKEN": 528709.3439977469,
+    "SHARES": 523877.408958,
+    "PPS": 1.009223407913996
+  },
+  "2025-02-06 04:30": {
+    "LTVL": 714119.857765,
+    "TVL_USD": 528205.312626,
+    "TVL_TOKEN": 528190.7451252495,
+    "SHARES": 523877.408958,
+    "PPS": 1.0082334838141405
   }
 }
