Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4002,5 +4002,12 @@
     "TVL_TOKEN": 528190.7451252495,
     "SHARES": 523877.408958,
     "PPS": 1.0082334838141405
+  },
+  "2025-02-06 04:40": {
+    "LTVL": 713907.822736,
+    "TVL_USD": 528723.944568,
+    "TVL_TOKEN": 528705.7940980886,
+    "SHARES": 523877.408958,
+    "PPS": 1.0092166317110187
   }
 }
