Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4009,5 +4009,26 @@
     "TVL_TOKEN": 528705.7940980886,
     "SHARES": 523877.408958,
     "PPS": 1.0092166317110187
+  },
+  "2025-02-06 04:50": {
+    "LTVL": 713472.044804,
+    "TVL_USD": 528349.037392,
+    "TVL_TOKEN": 528319.9956418395,
+    "SHARES": 523877.408958,
+    "PPS": 1.0084802028258402
+  },
+  "2025-02-06 05:00": {
+    "LTVL": 714398.319355,
+    "TVL_USD": 528824.201185,
+    "TVL_TOKEN": 528805.3069713819,
+    "SHARES": 523877.408958,
+    "PPS": 1.0094065862148618
+  },
+  "2025-02-06 05:10": {
+    "LTVL": 712682.000832,
+    "TVL_USD": 527585.119606,
+    "TVL_TOKEN": 527555.428786468,
+    "SHARES": 523877.408958,
+    "PPS": 1.0070207643345104
   }
 }
