Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4030,5 +4030,19 @@
     "TVL_TOKEN": 527555.428786468,
     "SHARES": 523877.408958,
     "PPS": 1.0070207643345104
+  },
+  "2025-02-06 05:20": {
+    "LTVL": 712262.170934,
+    "TVL_USD": 527276.852832,
+    "TVL_TOKEN": 527275.2340970313,
+    "SHARES": 523877.408958,
+    "PPS": 1.0064859165158306
+  },
+  "2025-02-06 05:30": {
+    "LTVL": 713761.664189,
+    "TVL_USD": 527465.004249,
+    "TVL_TOKEN": 527462.8574751702,
+    "SHARES": 523877.408958,
+    "PPS": 1.0068440601863358
   }
 }
