Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4044,5 +4044,75 @@
     "TVL_TOKEN": 527462.8574751702,
     "SHARES": 523877.408958,
     "PPS": 1.0068440601863358
+  },
+  "2025-02-06 05:40": {
+    "LTVL": 714289.046447,
+    "TVL_USD": 527239.539345,
+    "TVL_TOKEN": 527228.9684041835,
+    "SHARES": 523877.408958,
+    "PPS": 1.0063976025476071
+  },
+  "2025-02-06 05:50": {
+    "LTVL": 714515.358323,
+    "TVL_USD": 528441.495984,
+    "TVL_TOKEN": 528423.0117470492,
+    "SHARES": 523877.408958,
+    "PPS": 1.0086768444512437
+  },
+  "2025-02-06 06:00": {
+    "LTVL": 714233.334441,
+    "TVL_USD": 527950.151901,
+    "TVL_TOKEN": 527920.5989058733,
+    "SHARES": 523877.408958,
+    "PPS": 1.007717816952472
+  },
+  "2025-02-06 06:10": {
+    "LTVL": 714551.963447,
+    "TVL_USD": 527896.830817,
+    "TVL_TOKEN": 527883.433135467,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076468733122794
+  },
+  "2025-02-06 06:20": {
+    "LTVL": 715794.234248,
+    "TVL_USD": 527814.0109519999,
+    "TVL_TOKEN": 527814.3276405965,
+    "SHARES": 523877.408958,
+    "PPS": 1.0075149617358516
+  },
+  "2025-02-06 06:30": {
+    "LTVL": 715109.446276,
+    "TVL_USD": 528093.1904130001,
+    "TVL_TOKEN": 528096.1160654831,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080528517461254
+  },
+  "2025-02-06 06:40": {
+    "LTVL": 716043.091201,
+    "TVL_USD": 527332.668031,
+    "TVL_TOKEN": 527334.5347952532,
+    "SHARES": 523877.408958,
+    "PPS": 1.0065991122696614
+  },
+  "2025-02-06 06:50": {
+    "LTVL": 716673.454045,
+    "TVL_USD": 527641.317487,
+    "TVL_TOKEN": 527655.638061017,
+    "SHARES": 523877.408958,
+    "PPS": 1.0072120481593814
+  },
+  "2025-02-06 07:00": {
+    "LTVL": 716984.626496,
+    "TVL_USD": 527881.444068,
+    "TVL_TOKEN": 527896.6158167385,
+    "SHARES": 523877.408958,
+    "PPS": 1.007672036988067
+  },
+  "2025-02-06 07:10": {
+    "LTVL": 715984.401995,
+    "TVL_USD": 528371.540015,
+    "TVL_TOKEN": 528391.587191818,
+    "SHARES": 523877.408958,
+    "PPS": 1.0086168598924639
   }
 }
