Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4114,5 +4114,12 @@
     "TVL_TOKEN": 528391.587191818,
     "SHARES": 523877.408958,
     "PPS": 1.0086168598924639
+  },
+  "2025-02-06 07:20": {
+    "LTVL": 716130.591051,
+    "TVL_USD": 528125.5920320001,
+    "TVL_TOKEN": 528131.8820827156,
+    "SHARES": 523877.408958,
+    "PPS": 1.008121123476536
   }
 }
