Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4121,5 +4121,103 @@
     "TVL_TOKEN": 528131.8820827156,
     "SHARES": 523877.408958,
     "PPS": 1.008121123476536
+  },
+  "2025-02-06 07:30": {
+    "LTVL": 715918.158956,
+    "TVL_USD": 528349.2763319999,
+    "TVL_TOKEN": 528395.3101314185,
+    "SHARES": 523877.408958,
+    "PPS": 1.0086239664016141
+  },
+  "2025-02-06 07:40": {
+    "LTVL": 715233.65802,
+    "TVL_USD": 527767.31197,
+    "TVL_TOKEN": 527795.8921175582,
+    "SHARES": 523877.408958,
+    "PPS": 1.0074797712070693
+  },
+  "2025-02-06 07:50": {
+    "LTVL": 715217.523412,
+    "TVL_USD": 528411.523912,
+    "TVL_TOKEN": 528445.8464697282,
+    "SHARES": 523877.408958,
+    "PPS": 1.0087204323637755
+  },
+  "2025-02-06 08:00": {
+    "LTVL": 715407.558804,
+    "TVL_USD": 528667.122881,
+    "TVL_TOKEN": 528697.9142475259,
+    "SHARES": 523877.408958,
+    "PPS": 1.0092015903092937
+  },
+  "2025-02-06 08:10": {
+    "LTVL": 715316.793262,
+    "TVL_USD": 528082.966277,
+    "TVL_TOKEN": 528105.7434777162,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080712289696294
+  },
+  "2025-02-06 08:20": {
+    "LTVL": 714796.995132,
+    "TVL_USD": 527575.692744,
+    "TVL_TOKEN": 527628.5875098979,
+    "SHARES": 523877.408958,
+    "PPS": 1.007160412890029
+  },
+  "2025-02-06 08:30": {
+    "LTVL": 714616.087554,
+    "TVL_USD": 527955.6580909999,
+    "TVL_TOKEN": 527980.2461310623,
+    "SHARES": 523877.408958,
+    "PPS": 1.0078316741720603
+  },
+  "2025-02-06 08:40": {
+    "LTVL": 714514.786199,
+    "TVL_USD": 528234.073041,
+    "TVL_TOKEN": 528291.9210063502,
+    "SHARES": 523877.408958,
+    "PPS": 1.0084266127396688
+  },
+  "2025-02-06 08:50": {
+    "LTVL": 714404.049408,
+    "TVL_USD": 528078.547055,
+    "TVL_TOKEN": 528138.1104710989,
+    "SHARES": 523877.408958,
+    "PPS": 1.0081330124953727
+  },
+  "2025-02-06 09:00": {
+    "LTVL": 713822.972298,
+    "TVL_USD": 528233.605048,
+    "TVL_TOKEN": 528252.1519810561,
+    "SHARES": 523877.408958,
+    "PPS": 1.0083506998932394
+  },
+  "2025-02-06 09:10": {
+    "LTVL": 713948.147139,
+    "TVL_USD": 527507.543232,
+    "TVL_TOKEN": 527565.575445299,
+    "SHARES": 523877.408958,
+    "PPS": 1.0070401327185206
+  },
+  "2025-02-06 09:20": {
+    "LTVL": 715954.960366,
+    "TVL_USD": 528034.0926130001,
+    "TVL_TOKEN": 528043.4601039824,
+    "SHARES": 523877.408958,
+    "PPS": 1.0079523397549603
+  },
+  "2025-02-06 09:30": {
+    "LTVL": 715360.298483,
+    "TVL_USD": 528504.9046669999,
+    "TVL_TOKEN": 528552.035652019,
+    "SHARES": 523877.408958,
+    "PPS": 1.0089231308968196
+  },
+  "2025-02-06 09:40": {
+    "LTVL": 716026.88526,
+    "TVL_USD": 528347.486665,
+    "TVL_TOKEN": 528397.7637122172,
+    "SHARES": 523877.408958,
+    "PPS": 1.008628649903435
   }
 }
