Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4219,5 +4219,19 @@
     "TVL_TOKEN": 528397.7637122172,
     "SHARES": 523877.408958,
     "PPS": 1.008628649903435
+  },
+  "2025-02-06 09:50": {
+    "LTVL": 715796.848296,
+    "TVL_USD": 528505.342041,
+    "TVL_TOKEN": 528555.5601047656,
+    "SHARES": 523877.408958,
+    "PPS": 1.0089298585256243
+  },
+  "2025-02-06 10:00": {
+    "LTVL": 716205.416818,
+    "TVL_USD": 527994.725253,
+    "TVL_TOKEN": 528033.218874656,
+    "SHARES": 523877.408958,
+    "PPS": 1.0079327908506723
   }
 }
