Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4233,5 +4233,12 @@
     "TVL_TOKEN": 528033.218874656,
     "SHARES": 523877.408958,
     "PPS": 1.0079327908506723
+  },
+  "2025-02-06 10:10": {
+    "LTVL": 716671.641289,
+    "TVL_USD": 528071.674551,
+    "TVL_TOKEN": 528129.4571949117,
+    "SHARES": 523877.408958,
+    "PPS": 1.0081164947451524
   }
 }
