Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4240,5 +4240,75 @@
     "TVL_TOKEN": 528129.4571949117,
     "SHARES": 523877.408958,
     "PPS": 1.0081164947451524
+  },
+  "2025-02-06 10:20": {
+    "LTVL": 716264.235334,
+    "TVL_USD": 528505.110017,
+    "TVL_TOKEN": 528553.2189309872,
+    "SHARES": 523877.408958,
+    "PPS": 1.0089253895912165
+  },
+  "2025-02-06 10:30": {
+    "LTVL": 716661.497831,
+    "TVL_USD": 528745.5345760001,
+    "TVL_TOKEN": 528807.5213936579,
+    "SHARES": 523877.408958,
+    "PPS": 1.009410813200485
+  },
+  "2025-02-06 10:40": {
+    "LTVL": 715165.312009,
+    "TVL_USD": 529117.721896,
+    "TVL_TOKEN": 529169.4323329275,
+    "SHARES": 523877.408958,
+    "PPS": 1.010101644553548
+  },
+  "2025-02-06 10:50": {
+    "LTVL": 714492.206399,
+    "TVL_USD": 528141.222528,
+    "TVL_TOKEN": 528178.0101264053,
+    "SHARES": 523877.408958,
+    "PPS": 1.0082091746940554
+  },
+  "2025-02-06 11:00": {
+    "LTVL": 714417.519653,
+    "TVL_USD": 527838.05946,
+    "TVL_TOKEN": 527861.5915297504,
+    "SHARES": 523877.408958,
+    "PPS": 1.007605181104631
+  },
+  "2025-02-06 11:10": {
+    "LTVL": 713899.915823,
+    "TVL_USD": 528250.212573,
+    "TVL_TOKEN": 528252.7376210858,
+    "SHARES": 523877.408958,
+    "PPS": 1.008351817788418
+  },
+  "2025-02-06 11:20": {
+    "LTVL": 712348.65571,
+    "TVL_USD": 528289.795181,
+    "TVL_TOKEN": 528288.1522048467,
+    "SHARES": 523877.408958,
+    "PPS": 1.0084194186873219
+  },
+  "2025-02-06 11:30": {
+    "LTVL": 712586.130165,
+    "TVL_USD": 529012.156391,
+    "TVL_TOKEN": 529009.5113434433,
+    "SHARES": 523877.408958,
+    "PPS": 1.0097963804082546
+  },
+  "2025-02-06 11:40": {
+    "LTVL": 712136.820083,
+    "TVL_USD": 528726.291912,
+    "TVL_TOKEN": 528725.239748773,
+    "SHARES": 523877.408958,
+    "PPS": 1.0092537504154178
+  },
+  "2025-02-06 11:50": {
+    "LTVL": 714236.701518,
+    "TVL_USD": 528784.751196,
+    "TVL_TOKEN": 528795.3641189579,
+    "SHARES": 523877.408958,
+    "PPS": 1.009387606865392
   }
 }
