Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4310,5 +4310,12 @@
     "TVL_TOKEN": 528795.3641189579,
     "SHARES": 523877.408958,
     "PPS": 1.009387606865392
+  },
+  "2025-02-06 12:00": {
+    "LTVL": 713615.075872,
+    "TVL_USD": 529074.8278099999,
+    "TVL_TOKEN": 529072.1824490876,
+    "SHARES": 523877.408958,
+    "PPS": 1.0099160097424702
   }
 }
