Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4317,5 +4317,19 @@
     "TVL_TOKEN": 529072.1824490876,
     "SHARES": 523877.408958,
     "PPS": 1.0099160097424702
+  },
+  "2025-02-06 12:10": {
+    "LTVL": 711943.303727,
+    "TVL_USD": 529224.514089,
+    "TVL_TOKEN": 529232.7912898557,
+    "SHARES": 523877.408958,
+    "PPS": 1.0102225868882333
+  },
+  "2025-02-06 12:20": {
+    "LTVL": 711767.617085,
+    "TVL_USD": 528735.296028,
+    "TVL_TOKEN": 528762.1677213636,
+    "SHARES": 523877.408958,
+    "PPS": 1.0093242401367897
   }
 }
