Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4331,5 +4331,26 @@
     "TVL_TOKEN": 528762.1677213636,
     "SHARES": 523877.408958,
     "PPS": 1.0093242401367897
+  },
+  "2025-02-06 12:30": {
+    "LTVL": 711908.183359,
+    "TVL_USD": 529197.240977,
+    "TVL_TOKEN": 529223.5963120963,
+    "SHARES": 523877.408958,
+    "PPS": 1.0102050351144745
+  },
+  "2025-02-06 12:40": {
+    "LTVL": 710796.603272,
+    "TVL_USD": 528647.587582,
+    "TVL_TOKEN": 528660.3335826426,
+    "SHARES": 523877.408958,
+    "PPS": 1.009129854700465
+  },
+  "2025-02-06 12:50": {
+    "LTVL": 711985.533232,
+    "TVL_USD": 530439.902378,
+    "TVL_TOKEN": 530466.3408204265,
+    "SHARES": 523877.408958,
+    "PPS": 1.0125772399224695
   }
 }
