Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4352,5 +4352,40 @@
     "TVL_TOKEN": 530466.3408204265,
     "SHARES": 523877.408958,
     "PPS": 1.0125772399224695
+  },
+  "2025-02-06 13:00": {
+    "LTVL": 709799.032329,
+    "TVL_USD": 528882.795403,
+    "TVL_TOKEN": 528910.1929509948,
+    "SHARES": 523877.408958,
+    "PPS": 1.0096067971379126
+  },
+  "2025-02-06 13:10": {
+    "LTVL": 710181.825098,
+    "TVL_USD": 528944.94056,
+    "TVL_TOKEN": 528971.5531188374,
+    "SHARES": 523877.408958,
+    "PPS": 1.009723924096994
+  },
+  "2025-02-06 13:20": {
+    "LTVL": 709954.255047,
+    "TVL_USD": 528588.68184,
+    "TVL_TOKEN": 528604.957586644,
+    "SHARES": 523877.408958,
+    "PPS": 1.0090241505890607
+  },
+  "2025-02-06 13:30": {
+    "LTVL": 709806.930672,
+    "TVL_USD": 528096.6000260001,
+    "TVL_TOKEN": 528099.2722083174,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080588763289389
+  },
+  "2025-02-06 13:40": {
+    "LTVL": 711697.550237,
+    "TVL_USD": 528349.87217,
+    "TVL_TOKEN": 528350.3054172505,
+    "SHARES": 523877.408958,
+    "PPS": 1.0085380594443787
   }
 }
