Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4387,5 +4387,19 @@
     "TVL_TOKEN": 528350.3054172505,
     "SHARES": 523877.408958,
     "PPS": 1.0085380594443787
+  },
+  "2025-02-06 13:50": {
+    "LTVL": 710276.425829,
+    "TVL_USD": 527709.297649,
+    "TVL_TOKEN": 527708.4638696271,
+    "SHARES": 523877.408958,
+    "PPS": 1.0073128843621013
+  },
+  "2025-02-06 14:00": {
+    "LTVL": 713592.548694,
+    "TVL_USD": 529415.813306,
+    "TVL_TOKEN": 529437.4620038213,
+    "SHARES": 523877.408958,
+    "PPS": 1.0106132712553502
   }
 }
