Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4401,5 +4401,68 @@
     "TVL_TOKEN": 529437.4620038213,
     "SHARES": 523877.408958,
     "PPS": 1.0106132712553502
+  },
+  "2025-02-06 14:10": {
+    "LTVL": 711271.778765,
+    "TVL_USD": 529181.866843,
+    "TVL_TOKEN": 529208.327259363,
+    "SHARES": 523877.408958,
+    "PPS": 1.0101758888820311
+  },
+  "2025-02-06 14:20": {
+    "LTVL": 710028.876627,
+    "TVL_USD": 529772.6906130001,
+    "TVL_TOKEN": 529792.6637964252,
+    "SHARES": 523877.408958,
+    "PPS": 1.011291295897242
+  },
+  "2025-02-06 14:30": {
+    "LTVL": 709721.614242,
+    "TVL_USD": 528992.494479,
+    "TVL_TOKEN": 529014.9881962981,
+    "SHARES": 523877.408958,
+    "PPS": 1.009806834863364
+  },
+  "2025-02-06 14:40": {
+    "LTVL": 709662.985632,
+    "TVL_USD": 530112.424644,
+    "TVL_TOKEN": 530129.3781815143,
+    "SHARES": 523877.408958,
+    "PPS": 1.0119340309710043
+  },
+  "2025-02-06 14:50": {
+    "LTVL": 707568.111378,
+    "TVL_USD": 528662.884959,
+    "TVL_TOKEN": 528668.7954761335,
+    "SHARES": 523877.408958,
+    "PPS": 1.0091460071310645
+  },
+  "2025-02-06 15:00": {
+    "LTVL": 705444.221051,
+    "TVL_USD": 528427.75396,
+    "TVL_TOKEN": 528435.4585489857,
+    "SHARES": 523877.408958,
+    "PPS": 1.0087006034485275
+  },
+  "2025-02-06 15:10": {
+    "LTVL": 706500.258094,
+    "TVL_USD": 528969.138847,
+    "TVL_TOKEN": 528984.1249672603,
+    "SHARES": 523877.408958,
+    "PPS": 1.0097479217884535
+  },
+  "2025-02-06 15:20": {
+    "LTVL": 704999.588126,
+    "TVL_USD": 528156.1760709999,
+    "TVL_TOKEN": 528155.4630611248,
+    "SHARES": 523877.408958,
+    "PPS": 1.0081661358744862
+  },
+  "2025-02-06 15:30": {
+    "LTVL": 704340.347945,
+    "TVL_USD": 529833.442342,
+    "TVL_TOKEN": 529849.3590167448,
+    "SHARES": 523877.408958,
+    "PPS": 1.0113995182014492
   }
 }
