Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4464,5 +4464,12 @@
     "TVL_TOKEN": 529849.3590167448,
     "SHARES": 523877.408958,
     "PPS": 1.0113995182014492
+  },
+  "2025-02-06 15:40": {
+    "LTVL": 701199.652007,
+    "TVL_USD": 527881.872224,
+    "TVL_TOKEN": 527905.5751843258,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076891390188745
   }
 }
