Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4471,5 +4471,68 @@
     "TVL_TOKEN": 527905.5751843258,
     "SHARES": 523877.408958,
     "PPS": 1.0076891390188745
+  },
+  "2025-02-06 15:50": {
+    "LTVL": 698634.112196,
+    "TVL_USD": 527460.2462759999,
+    "TVL_TOKEN": 527486.5467552211,
+    "SHARES": 523877.408958,
+    "PPS": 1.0068892793151736
+  },
+  "2025-02-06 16:00": {
+    "LTVL": 696039.679101,
+    "TVL_USD": 525912.91945,
+    "TVL_TOKEN": 525912.3987967252,
+    "SHARES": 523877.408958,
+    "PPS": 1.0038844771771565
+  },
+  "2025-02-06 16:10": {
+    "LTVL": 698322.950977,
+    "TVL_USD": 527155.449055,
+    "TVL_TOKEN": 527160.6257723451,
+    "SHARES": 523877.408958,
+    "PPS": 1.0062671471573388
+  },
+  "2025-02-06 16:20": {
+    "LTVL": 698451.520814,
+    "TVL_USD": 528659.032761,
+    "TVL_TOKEN": 528661.9774082141,
+    "SHARES": 523877.408958,
+    "PPS": 1.0091329925062633
+  },
+  "2025-02-06 16:30": {
+    "LTVL": 697717.89049,
+    "TVL_USD": 528512.05307,
+    "TVL_TOKEN": 528517.2378241031,
+    "SHARES": 523877.408958,
+    "PPS": 1.0088567072883172
+  },
+  "2025-02-06 16:40": {
+    "LTVL": 696002.296001,
+    "TVL_USD": 527513.547541,
+    "TVL_TOKEN": 527538.3945993856,
+    "SHARES": 523877.408958,
+    "PPS": 1.0069882487367938
+  },
+  "2025-02-06 16:50": {
+    "LTVL": 694306.313969,
+    "TVL_USD": 525682.408928,
+    "TVL_TOKEN": 525708.6785906692,
+    "SHARES": 523877.408958,
+    "PPS": 1.0034956071809082
+  },
+  "2025-02-06 17:00": {
+    "LTVL": 694734.517414,
+    "TVL_USD": 526099.016345,
+    "TVL_TOKEN": 526117.4515005006,
+    "SHARES": 523877.408958,
+    "PPS": 1.0042758907030482
+  },
+  "2025-02-06 17:10": {
+    "LTVL": 696149.642771,
+    "TVL_USD": 526972.465843,
+    "TVL_TOKEN": 526980.154483454,
+    "SHARES": 523877.408958,
+    "PPS": 1.0059226557060847
   }
 }
