Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4534,5 +4534,12 @@
     "TVL_TOKEN": 526980.154483454,
     "SHARES": 523877.408958,
     "PPS": 1.0059226557060847
+  },
+  "2025-02-06 17:20": {
+    "LTVL": 694521.356636,
+    "TVL_USD": 526230.549954,
+    "TVL_TOKEN": 526243.6271081336,
+    "SHARES": 523877.408958,
+    "PPS": 1.0045167401946957
   }
 }
