Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4541,5 +4541,33 @@
     "TVL_TOKEN": 526243.6271081336,
     "SHARES": 523877.408958,
     "PPS": 1.0045167401946957
+  },
+  "2025-02-06 17:30": {
+    "LTVL": 697376.388119,
+    "TVL_USD": 526737.340082,
+    "TVL_TOKEN": 526735.7388053541,
+    "SHARES": 523877.408958,
+    "PPS": 1.0054561044215276
+  },
+  "2025-02-06 17:40": {
+    "LTVL": 699369.211608,
+    "TVL_USD": 527250.143837,
+    "TVL_TOKEN": 527246.8274544553,
+    "SHARES": 523877.408958,
+    "PPS": 1.0064316926800816
+  },
+  "2025-02-06 17:50": {
+    "LTVL": 697214.560527,
+    "TVL_USD": 527343.919403,
+    "TVL_TOKEN": 527343.919403,
+    "SHARES": 523877.408958,
+    "PPS": 1.006617026017394
+  },
+  "2025-02-06 18:00": {
+    "LTVL": 694868.609572,
+    "TVL_USD": 526220.545219,
+    "TVL_TOKEN": 526219.5401396783,
+    "SHARES": 523877.408958,
+    "PPS": 1.004470761940922
   }
 }
