Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4569,5 +4569,12 @@
     "TVL_TOKEN": 526219.5401396783,
     "SHARES": 523877.408958,
     "PPS": 1.004470761940922
+  },
+  "2025-02-06 18:10": {
+    "LTVL": 696023.71235,
+    "TVL_USD": 526409.568472,
+    "TVL_TOKEN": 526423.4081434,
+    "SHARES": 523877.408958,
+    "PPS": 1.0048599140597874
   }
 }
