Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4576,5 +4576,54 @@
     "TVL_TOKEN": 526423.4081434,
     "SHARES": 523877.408958,
     "PPS": 1.0048599140597874
+  },
+  "2025-02-06 18:20": {
+    "LTVL": 693645.200359,
+    "TVL_USD": 525014.336408,
+    "TVL_TOKEN": 525022.3692502496,
+    "SHARES": 523877.408958,
+    "PPS": 1.0021855500402792
+  },
+  "2025-02-06 18:30": {
+    "LTVL": 692851.683248,
+    "TVL_USD": 525406.442454,
+    "TVL_TOKEN": 525415.9314657223,
+    "SHARES": 523877.408958,
+    "PPS": 1.0029367987269815
+  },
+  "2025-02-06 18:40": {
+    "LTVL": 693659.566576,
+    "TVL_USD": 525943.542287,
+    "TVL_TOKEN": 525964.8333434537,
+    "SHARES": 523877.408958,
+    "PPS": 1.0039845665221672
+  },
+  "2025-02-06 18:50": {
+    "LTVL": 693678.147368,
+    "TVL_USD": 525068.604803,
+    "TVL_TOKEN": 525084.0527758326,
+    "SHARES": 523877.408958,
+    "PPS": 1.0023032942386896
+  },
+  "2025-02-06 19:00": {
+    "LTVL": 693552.425705,
+    "TVL_USD": 525652.948606,
+    "TVL_TOKEN": 525655.5768838845,
+    "SHARES": 523877.408958,
+    "PPS": 1.003394244331744
+  },
+  "2025-02-06 19:10": {
+    "LTVL": 692560.641652,
+    "TVL_USD": 524939.734805,
+    "TVL_TOKEN": 524939.0996286895,
+    "SHARES": 523877.408958,
+    "PPS": 1.0020266013623325
+  },
+  "2025-02-06 19:20": {
+    "LTVL": 695903.911739,
+    "TVL_USD": 525988.159019,
+    "TVL_TOKEN": 525989.6633494372,
+    "SHARES": 523877.408958,
+    "PPS": 1.0040319631183152
   }
 }
