--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4625,5 +4625,12 @@
     "TVL_TOKEN": 525989.6633494372,
     "SHARES": 523877.408958,
     "PPS": 1.0040319631183152
+  },
+  "2025-02-06 19:30": {
+    "LTVL": 694839.069071,
+    "TVL_USD": 526543.675055,
+    "TVL_TOKEN": 526540.9738998039,
+    "SHARES": 523877.408958,
+    "PPS": 1.0050843286926645
   }
 }
