Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4632,5 +4632,26 @@
     "TVL_TOKEN": 526540.9738998039,
     "SHARES": 523877.408958,
     "PPS": 1.0050843286926645
+  },
+  "2025-02-06 19:40": {
+    "LTVL": 690862.387389,
+    "TVL_USD": 523164.462235,
+    "TVL_TOKEN": 523166.05265980004,
+    "SHARES": 523877.408958,
+    "PPS": 0.9986421321361902
+  },
+  "2025-02-06 19:50": {
+    "LTVL": 700472.105069,
+    "TVL_USD": 522848.020435,
+    "TVL_TOKEN": 522863.70634619036,
+    "SHARES": 523877.408958,
+    "PPS": 0.9980650003331392
+  },
+  "2025-02-06 20:00": {
+    "LTVL": 701160.893937,
+    "TVL_USD": 523857.541354,
+    "TVL_TOKEN": 523883.33736953203,
+    "SHARES": 523877.408958,
+    "PPS": 1.0000113164099667
   }
 }
