Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4653,5 +4653,33 @@
     "TVL_TOKEN": 523883.33736953203,
     "SHARES": 523877.408958,
     "PPS": 1.0000113164099667
+  },
+  "2025-02-06 20:10": {
+    "LTVL": 703736.947321,
+    "TVL_USD": 524798.701729,
+    "TVL_TOKEN": 524824.9324791253,
+    "SHARES": 523877.408958,
+    "PPS": 1.0018086741381156
+  },
+  "2025-02-06 20:20": {
+    "LTVL": 702721.805919,
+    "TVL_USD": 523741.178578,
+    "TVL_TOKEN": 523748.95625000034,
+    "SHARES": 523877.408958,
+    "PPS": 0.999754803880062
+  },
+  "2025-02-06 20:30": {
+    "LTVL": 703681.979585,
+    "TVL_USD": 523995.92595,
+    "TVL_TOKEN": 524001.1659616596,
+    "SHARES": 523877.408958,
+    "PPS": 1.0002362327551129
+  },
+  "2025-02-06 20:40": {
+    "LTVL": 706066.538886,
+    "TVL_USD": 524758.493422,
+    "TVL_TOKEN": 524763.7410594105,
+    "SHARES": 523877.408958,
+    "PPS": 1.0016918692928054
   }
 }
