Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4681,5 +4681,19 @@
     "TVL_TOKEN": 524763.7410594105,
     "SHARES": 523877.408958,
     "PPS": 1.0016918692928054
+  },
+  "2025-02-06 20:50": {
+    "LTVL": 709890.428413,
+    "TVL_USD": 528145.82714,
+    "TVL_TOKEN": 528148.4678823394,
+    "SHARES": 523877.408958,
+    "PPS": 1.0081527831727553
+  },
+  "2025-02-06 21:00": {
+    "LTVL": 710809.001768,
+    "TVL_USD": 527919.589717,
+    "TVL_TOKEN": 527909.5383193904,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076967040235814
   }
 }
