Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4695,5 +4695,47 @@
     "TVL_TOKEN": 527909.5383193904,
     "SHARES": 523877.408958,
     "PPS": 1.0076967040235814
+  },
+  "2025-02-06 21:10": {
+    "LTVL": 710806.965098,
+    "TVL_USD": 528492.00902,
+    "TVL_TOKEN": 528480.6308320182,
+    "SHARES": 523877.408958,
+    "PPS": 1.0087868302685052
+  },
+  "2025-02-06 21:20": {
+    "LTVL": 708412.422761,
+    "TVL_USD": 528055.094782,
+    "TVL_TOKEN": 528056.2934697861,
+    "SHARES": 523877.408958,
+    "PPS": 1.007976836642179
+  },
+  "2025-02-06 21:30": {
+    "LTVL": 707605.224672,
+    "TVL_USD": 527965.58717,
+    "TVL_TOKEN": 527968.2270111351,
+    "SHARES": 523877.408958,
+    "PPS": 1.0078087315528108
+  },
+  "2025-02-06 21:40": {
+    "LTVL": 708656.352884,
+    "TVL_USD": 527901.319786,
+    "TVL_TOKEN": 527903.3627720139,
+    "SHARES": 523877.408958,
+    "PPS": 1.0076849158699581
+  },
+  "2025-02-06 21:50": {
+    "LTVL": 708951.332491,
+    "TVL_USD": 527958.576692,
+    "TVL_TOKEN": 527973.0114741337,
+    "SHARES": 523877.408958,
+    "PPS": 1.0078178643440263
+  },
+  "2025-02-06 22:00": {
+    "LTVL": 711085.477824,
+    "TVL_USD": 527257.1118600001,
+    "TVL_TOKEN": 527272.3974868032,
+    "SHARES": 523877.408958,
+    "PPS": 1.0064805018707639
   }
 }
