Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4737,5 +4737,40 @@
     "TVL_TOKEN": 527272.3974868032,
     "SHARES": 523877.408958,
     "PPS": 1.0064805018707639
+  },
+  "2025-02-06 22:10": {
+    "LTVL": 708683.713874,
+    "TVL_USD": 528241.5287649999,
+    "TVL_TOKEN": 528244.1699858499,
+    "SHARES": 523877.408958,
+    "PPS": 1.0083354635133732
+  },
+  "2025-02-06 22:20": {
+    "LTVL": 707465.898224,
+    "TVL_USD": 528702.817068,
+    "TVL_TOKEN": 528703.340484307,
+    "SHARES": 523877.408958,
+    "PPS": 1.0092119481462387
+  },
+  "2025-02-06 22:30": {
+    "LTVL": 708473.507406,
+    "TVL_USD": 528089.972611,
+    "TVL_TOKEN": 528089.8194649523,
+    "SHARES": 523877.408958,
+    "PPS": 1.0080408325209727
+  },
+  "2025-02-06 22:40": {
+    "LTVL": 707664.5784,
+    "TVL_USD": 527528.052961,
+    "TVL_TOKEN": 527528.052961,
+    "SHARES": 523877.408958,
+    "PPS": 1.0069685081673232
+  },
+  "2025-02-06 22:50": {
+    "LTVL": 707043.552082,
+    "TVL_USD": 527747.1933609999,
+    "TVL_TOKEN": 527747.1933609999,
+    "SHARES": 523877.408958,
+    "PPS": 1.007386812900936
   }
 }
