--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -4772,5 +4772,12 @@
     "TVL_TOKEN": 527747.1933609999,
     "SHARES": 523877.408958,
     "PPS": 1.007386812900936
+  },
+  "2025-02-06 23:00": {
+    "LTVL": 706688.458692,
+    "TVL_USD": 527534.030102,
+    "TVL_TOKEN": 527534.030102,
+    "SHARES": 523877.408958,
+    "PPS": 1.0069799175942193
   }
 }
